--- a/housing_analysis.html
+++ b/housing_analysis.html
@@ -367,7 +367,8 @@ future reference.</p>
 cleaning process to ensure the dataset’s accuracy and consistency.
 Addressing missing values, converting data to appropriate formats,
 handling outliers, and resolving inconsistencies were key steps in this
-process. While I have omitted the specific code details in this report,
+process. While I have omitted the specific code details in this report
+(Full code can found <a href="https://github.com/dabowski/housing_in_poland/blob/main/housing_analysis.Rmd">here</a>),
 rest assured that each step was meticulously executed to provide
 reliable and accurate data for my analysis. By optimizing my data
 collection and cleaning methods, I maximized efficiency and gained
